login and select_menu

--- a/Examples/1.add_remove_node.html
+++ b/Examples/1.add_remove_node.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>add remove node</title>
+    <title>增加/移除元素</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script type="text/javascript">
 
