--- a/Examples/2.switch_tab.html
+++ b/Examples/2.switch_tab.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <meta charset="UTF-8">
-    <title>switch tab</title>
+    <title>切换tab</title>
     <style type="text/css">
         /* CSS样式制作 */
         * {
